2023-11-02  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c: Prepend . to dot-command Usage messages.
	* poke/pk-cmd-compiler.c: Likewise.
	* poke/pk-cmd-def.c: Likewise.
	* poke/pk-cmd-set.c: Likewise.
	* poke/pk-cmd-map.c: Likewise.
	* poke/pk-cmd-vm.c: Likewise.

2023-11-02  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (sub_cmd): Use poke_completion_function.

2023-11-02  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Files as IO Spaces): Document that $<...>
	supports specifying a non ambiguous non-empty substring.

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios.h: Prototype for ios_get_handler.
	* libpoke/ios.c (ios_get_handler): New function.
	* libpoke/libpoke.h: Update description of
	pk_ios_completion_function.
	* libpoke/libpoke.c (pk_ios_completion_function): Complete on IOS
	handlers/names, not ids.
	* poked/poked.c (poked_autocmpl_send_one): Adapt to new
	pk_ios_completion_function.
	* poke/pk-repl.c (poke_completion_function): Complete IO space
	names.
	* testsuite/poke.repl/repl.exp: Update test
	tab-completion-subcommand-3.

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (ios_completion_function): Remove.
	(ios_cmd): Use poke_completion_function.
	(close_cmd): Likewise.
	* poke/pk-cmd-map.c (info_maps_completion_function): Remove.
	(info_maps_cmd): Use poke_completion_function.

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.pk (pk_prompt): New function.
	(pk_prompt_commented_p): Remove.
	* poke/pk-repl.c (pk_prompt): Call the Poke function pk_prompt to
	get the prompt string.
	* poke/pk-settings.pk (Example): Remove the prompt-commented
	setting.
	* doc/poke.texi (Changing the Prompt): New sectino

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-editor.c (pk_cmd_editor): Stylize the prompt.

2023-11-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.h (pk_ios_search): Add new param: FLAGS to support
	partial match of handlers.